--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -296,13 +296,16 @@ blockquote {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin: 1.75em 0 1.75em -2.2em;
-    padding: 0 0 0 1.75em;
-    border-left: #4A4A4A 0.4em solid;
+    /*padding: 0 0 0 1.75em;*/
+    /*border-left: #4A4A4A 0.4em solid;*/
+    border-left: 4px solid #DDD;
+    padding: 0 15px;
+    color: #777;
 }
 
 blockquote p {
     margin: 0.8em 0;
-    font-style: italic;
+    /*font-style: italic;*/
 }
 
 blockquote small {
@@ -326,7 +329,7 @@ mark {
 
 code, tt {
     padding: 1px 3px;
-    font-family: Inconsolata, monospace, sans-serif;
+    font-family: Consolas;
     font-size: 0.85em;
     white-space: pre-wrap;
     border: #E3EDF3 1px solid;
